# avr-allocator

./: .gitignore  Cargo.toml  readme.md
examples/avr/: .gitignore  Cargo.toml
examples/avr/src/: main.rs
src/: avralloc.rs  lib.rs
