[package]
authors = ["flyingyizi <flyingyizi@gmail.com>"]
edition = "2018"
name = "avr-alloc-demo"
version = "0.1.0"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"

avr-allocator ={path = "../../../avr-allocator/" }
arduino-hal = {git="https://github.com/rahix/avr-hal",rev="1aacefb335517f85d0de858231e11055d9768cdf",features = ["arduino-nano"]}

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
#debug = true
lto = true
opt-level = "s"
